  05 Mar 2014; Alon Bar-Lev <alonbl@redhat.com>
  ovirt-engine-reports-9999.ebuild:
  Depend on 3.4 branch

  10 Feb 2014; Alon Bar-Lev <alonbl@redhat.com>
  ovirt-engine-reports-9999.ebuild:
  add patch dependency

  09 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> metadata.xml,
  ovirt-engine-reports-9999.ebuild:
  move to and build per upstream move

*ovirt-engine-reports-9999 (02 Feb 2014)

  02 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> +files/gentoo-setup.conf,
  +metadata.xml, +ovirt-engine-reports-9999.ebuild:
  initial import